tdf#90351: response does not always contain cmis:baseTypeId

So if we know which object we just created, don't rely on the server
response to tell us.